// Vitest Snapshot v1

exports[`Tree > Tree activableVue demo works fine 1`] = `
<t-space
  class="tdesign-tree-demo"
  data-v-6c5aa77d=""
  direction="vertical"
  size="10"
>
  <t-form
    data-v-6c5aa77d=""
    labelwidth="120"
  >
    <t-form-item
      data-v-6c5aa77d=""
      label="节点可高亮"
    >
      <t-switch
        data-v-6c5aa77d=""
      />
    </t-form-item>
    <t-form-item
      data-v-6c5aa77d=""
      label="节点可多选高亮"
    >
      <t-switch
        data-v-6c5aa77d=""
      />
    </t-form-item>
    <t-form-item
      data-v-6c5aa77d=""
      label="整个节点可点击"
    >
      <t-switch
        data-v-6c5aa77d=""
      />
    </t-form-item>
  </t-form>
  <t-tree
    activable="true"
    data="[object Object],[object Object]"
    data-v-6c5aa77d=""
    expand-all=""
    hover=""
    onactive="function () { [native code] }"
  />
</t-space>
`;

exports[`Tree > Tree baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-demo"
  data-v-74e1071d=""
>
  <t-tree
    activable=""
    data="[object Object],[object Object],[object Object],[object Object]"
    data-v-74e1071d=""
    hover=""
    transition=""
  />
</div>
`;

exports[`Tree > Tree checkableVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-form>
    <t-form-item
      label="可选"
      style="margin-bottom: 16px;"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="严格模式"
      style="margin-bottom: 16px;"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="选中值模式"
      style="margin-bottom: 16px;"
    >
      <t-radio-group
        name="value-mode"
        variant="default-filled"
      >
        <t-radio-button
          value="onlyLeaf"
        >
          onlyLeaf
        </t-radio-button>
        <t-radio-button
          value="parentFirst"
        >
          parentFirst
        </t-radio-button>
        <t-radio-button
          value="all"
        >
          all
        </t-radio-button>
      </t-radio-group>
    </t-form-item>
  </t-form>
  <t-tree
    checkable="true"
    data="[object Object],[object Object]"
    expand-all=""
    hover=""
    value-mode="onlyLeaf"
  />
</t-space>
`;

exports[`Tree > Tree controlledVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <t-input-adornment
      prepend="checked:"
    >
      <t-input
        value="1.1.1.1, 1.1.1.2"
      />
    </t-input-adornment>
    <t-input-adornment
      prepend="expanded:"
    >
      <t-input
        value="1, 1.1, 1.1.1, 2"
      />
    </t-input-adornment>
    <t-input-adornment
      prepend="actived:"
    >
      <t-input
        value="2"
      />
    </t-input-adornment>
  </div>
  <t-tree
    activable=""
    actived="2"
    checkable=""
    data="[object Object],[object Object]"
    expanded="1,1.1,1.1.1,2"
    value="1.1.1.1,1.1.1.2"
    value-mode="onlyLeaf"
  />
</div>
`;

exports[`Tree > Tree dataVue demo works fine 1`] = `
<div
  class="tdesign-tree-demo"
>
  <h3
    class="title"
  >
    数据切换
  </h3>
  <div
    class="operations"
  >
    <t-form
      labelwidth="150"
    >
      <t-form-item
        label="切换数据"
      >
        <t-switch />
      </t-form-item>
      <t-form-item
        label="默认展开全部"
      >
        <t-switch />
      </t-form-item>
      <t-form-item
        label="可选"
      >
        <t-switch />
      </t-form-item>
      <t-form-item
        label="节点可高亮"
      >
        <t-switch />
      </t-form-item>
      <t-form-item
        label="展开动画"
      >
        <t-switch />
      </t-form-item>
    </t-form>
  </div>
  <t-tree
    activable="true"
    checkable="true"
    data="[object Object],[object Object]"
    expand-all="true"
    hover=""
    label="function () { [native code] }"
    transition="true"
  />
</div>
`;

exports[`Tree > Tree disabledVue demo works fine 1`] = `
<div
  class="tdesign-tree-demo"
>
  <div
    class="operations"
  >
    <t-form>
      <t-form-item
        label="是否禁用整个 tree"
        labelwidth="150"
      >
        <t-switch />
      </t-form-item>
      <t-form-item
        label="是否只禁用 checkbox"
        labelwidth="200"
      >
        <t-switch />
      </t-form-item>
    </t-form>
  </div>
  <t-tree
    checkable=""
    data="[object Object],[object Object]"
    disabled="true"
    expand-all=""
    hover=""
  />
  <div
    class="operations"
  >
    <t-form>
      <t-form-item
        label="禁用指定节点 checkbox"
        labelwidth="200"
      >
        <t-switch />
      </t-form-item>
    </t-form>
  </div>
  <t-tree
    checkable=""
    data="[object Object],[object Object]"
    disablecheck="function () { [native code] }"
    expand-all=""
    hover=""
  />
</div>
`;

exports[`Tree > Tree emptyVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <t-tree
    data=""
  />
  <br />
  <t-tree
    data=""
    empty="😊 空数据（string）"
  />
  <br />
  <t-tree
    data=""
    empty="empty(h) {
        return h(\\"div\\", [\\"\\\\uD83D\\\\uDE0A \\\\u7A7A\\\\u6570\\\\u636E\\\\uFF08 empty props \\\\uFF09\\"]);
      }"
  />
  <br />
  <t-tree
    data=""
  >
    <br />
    <div
      slot="empty"
    >
      😊 空数据（slot）
    </div>
  </t-tree>
</t-space>
`;

exports[`Tree > Tree expandAllVue demo works fine 1`] = `
<t-space
  class="tdesign-tree-demo"
  data-v-5902ba8c=""
  direction="vertical"
  size="10"
>
  <t-form
    data-v-5902ba8c=""
    labelwidth="150"
  >
    <t-form-item
      data-v-5902ba8c=""
      label="切换数据"
    >
      <t-switch
        data-v-5902ba8c=""
      />
    </t-form-item>
    <t-form-item
      data-v-5902ba8c=""
      label="展开动画"
    >
      <t-switch
        data-v-5902ba8c=""
      />
    </t-form-item>
  </t-form>
  <t-tree
    data="[object Object],[object Object]"
    data-v-5902ba8c=""
    expand-all=""
    transition="true"
  />
</t-space>
`;

exports[`Tree > Tree expandLevelVue demo works fine 1`] = `
<div>
  <t-tree
    data="[object Object],[object Object]"
    expand-level="1"
    hover=""
  />
</div>
`;

exports[`Tree > Tree expandMutexVue demo works fine 1`] = `
<t-space
  class="tdesign-tree-demo"
  data-v-e4ed8150=""
  direction="vertical"
  size="10"
>
  <t-form
    data-v-e4ed8150=""
    labelwidth="120"
  >
    <t-form-item
      data-v-e4ed8150=""
      label="互斥展开"
    >
      <t-switch
        data-v-e4ed8150=""
      />
    </t-form-item>
    <t-form-item
      data-v-e4ed8150=""
      label="整个节点可点击"
    >
      <t-switch
        data-v-e4ed8150=""
      />
    </t-form-item>
  </t-form>
  <t-tree
    data="[object Object],[object Object]"
    data-v-e4ed8150=""
    expand-mutex="true"
    expand-on-click-node="true"
    hover=""
    onexpand="function () { [native code] }"
  />
</t-space>
`;

exports[`Tree > Tree filterVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32"
>
  <t-input-adornment
    prepend="filter:"
  >
    <t-input />
  </t-input-adornment>
  <t-tree
    data="[object Object],[object Object]"
    default-expanded="1.1.1"
    expand-on-click-node=""
    hover=""
    line=""
  />
</t-space>
`;

exports[`Tree > Tree iconVue demo works fine 1`] = `
<t-space
  data-v-a0fdae76=""
  direction="vertical"
  size="20"
>
  <div
    data-v-a0fdae76=""
  >
    <h3
      data-v-a0fdae76=""
    >
      render:
    </h3>
    <t-tree
      data="[object Object],[object Object]"
      data-v-a0fdae76=""
      expand-all=""
      hover=""
      icon="function () { [native code] }"
      load="function () { [native code] }"
    />
  </div>
  <div
    data-v-a0fdae76=""
  >
    <h3
      data-v-a0fdae76=""
    >
      scope slot:
    </h3>
    <t-tree
      data="[object Object],[object Object]"
      data-v-a0fdae76=""
      hover=""
      lazy=""
      load="function () { [native code] }"
    />
  </div>
</t-space>
`;

exports[`Tree > Tree labelVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="20"
>
  <div>
    <h3>
      render:
    </h3>
    <t-tree
      data="[object Object],[object Object]"
      expand-all=""
      label="label(createElement, node) {
        return createElement('strong', {
          domProps: {
            innerHTML: \`value: \${node.value}, label: \${node.label}\`,
          },
        });
      }"
    />
  </div>
  <div>
    <h3>
      scope slot:
    </h3>
    <t-tree
      checkable=""
      data="[object Object],[object Object]"
      expand-all=""
    />
  </div>
</t-space>
`;

exports[`Tree > Tree lazyVue demo works fine 1`] = `
<t-space
  class="tdesign-tree-demo"
  data-v-de8eeb80=""
  direction="vertical"
  size="10"
>
  <h3
    data-v-de8eeb80=""
  >
    数据延迟加载
  </h3>
  <p
    data-v-de8eeb80=""
  >
    默认为点击加载数据。
  </p>
  <p
    data-v-de8eeb80=""
  >
     valueMode 默认为 'onlyLeaf'。选中父节点时，子节点由于未加载，无法更新和获取选中状态，导致无法更新父节点的状态。 
  </p>
  <p
    data-v-de8eeb80=""
  >
    所以使用延迟加载时，推荐 valueMode 设置为 'all' 或者 'parentFirst'。
  </p>
  <t-form
    data-v-de8eeb80=""
    labelwidth="150"
  >
    <t-form-item
      data-v-de8eeb80=""
      label="可选"
    >
      <t-switch
        data-v-de8eeb80=""
      />
    </t-form-item>
    <t-form-item
      data-v-de8eeb80=""
      label="严格模式"
    >
      <t-switch
        data-v-de8eeb80=""
      />
    </t-form-item>
  </t-form>
  <t-tree
    checkable="true"
    data="[object Object],[object Object]"
    data-v-de8eeb80=""
    expand-all=""
    hover=""
    load="function () { [native code] }"
    valuemode="all"
  />
</t-space>
`;

exports[`Tree > Tree lineVue demo works fine 1`] = `
<t-space
  class="tdesign-tree-line"
  data-v-225666c0=""
  direction="vertical"
  size="32"
>
  <t-form
    data-v-225666c0=""
  >
    <t-form-item
      data-v-225666c0=""
      label="显示连线"
      style="margin-bottom: 16px;"
    >
      <t-switch
        data-v-225666c0=""
      />
    </t-form-item>
    <t-form-item
      data-v-225666c0=""
      label="显示图标"
      style="margin-bottom: 16px;"
    >
      <t-switch
        data-v-225666c0=""
      />
    </t-form-item>
  </t-form>
  <t-space
    data-v-225666c0=""
    direction="vertical"
    size="16"
    style="width: 100%;"
  >
    <t-tree
      data="[object Object],[object Object],[object Object],[object Object]"
      data-v-225666c0=""
      expand-all=""
      icon="true"
      line="true"
    />
    <h3
      data-v-225666c0=""
    >
      render
    </h3>
    <t-tree
      data="[object Object],[object Object],[object Object],[object Object]"
      data-v-225666c0=""
      expand-all=""
      icon="true"
      line="function () { [native code] }"
    />
    <h3
      data-v-225666c0=""
    >
      scope slot
    </h3>
    <t-tree
      data="[object Object],[object Object],[object Object],[object Object]"
      data-v-225666c0=""
      expand-all=""
      icon="true"
      line=""
    />
  </t-space>
</t-space>
`;

exports[`Tree > Tree loadVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="10"
>
  <t-form
    labelwidth="150"
  >
    <t-form-item
      label="可选"
    >
      <t-switch />
    </t-form-item>
  </t-form>
  <t-tree
    checkable="true"
    data="[object Object],[object Object]"
    expand-all=""
    hover=""
    load="function () { [native code] }"
  />
</t-space>
`;

exports[`Tree > Tree operationsVue demo works fine 1`] = `
<t-space
  data-v-43574890=""
  direction="vertical"
  size="20"
>
  <t-space
    data-v-43574890=""
    direction="vertical"
    size="10"
    style="width: 100%;"
  >
    <h3
      data-v-43574890=""
    >
      Render:
    </h3>
    <t-tree
      data="[object Object],[object Object]"
      data-v-43574890=""
      expand-all=""
      hover=""
      label="function () { [native code] }"
      operations="function () { [native code] }"
    />
  </t-space>
  <t-space
    data-v-43574890=""
    direction="vertical"
    size="10"
    style="width: 100%;"
  >
    <h3
      data-v-43574890=""
    >
      Scope Slot:
    </h3>
    <t-form
      data-v-43574890=""
      labelwidth="200"
    >
      <t-form-item
        data-v-43574890=""
        label="插入节点使用高亮节点"
        style="margin-bottom: 5px;"
      >
        <t-switch
          data-v-43574890=""
        />
      </t-form-item>
      <t-form-item
        data-v-43574890=""
        label="子节点展开触发父节点展开"
      >
        <t-switch
          data-v-43574890=""
        />
      </t-form-item>
    </t-form>
    <t-input-adornment
      data-v-43574890=""
      prepend="filter:"
    >
      <t-input
        data-v-43574890=""
      />
    </t-input-adornment>
    <t-tree
      activable=""
      checkable=""
      data="[object Object],[object Object]"
      data-v-43574890=""
      expand-all=""
      expand-parent="true"
      hover=""
      label="function () { [native code] }"
      line=""
    />
  </t-space>
  <t-space
    data-v-43574890=""
    direction="vertical"
    size="10"
  >
    <h3
      data-v-43574890=""
    >
      API:
    </h3>
    <t-space
      breakline=""
      data-v-43574890=""
      size="10"
    >
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取 value 为 'node1' 的单个节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取所有节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点的所有子节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取所有高亮节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点下的选中节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        插入一个根节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点的父节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点的所有父节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点在子节点中的位置
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        选中高亮节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        展开高亮节点
      </t-button>
      <t-button
        data-v-43574890=""
        theme="primary"
      >
        获取高亮节点与其子节点的数据
      </t-button>
    </t-space>
    <p
      class="tips"
      data-v-43574890=""
    >
      * 相关信息通过控制台输出
    </p>
  </t-space>
</t-space>
`;

exports[`Tree > Tree performanceVue demo works fine 1`] = `
<div
  class="tdesign-tree-demo tdesign-demo-performance"
>
  <div
    class="operations"
  >
    <t-input-adornment
      prepend="插入节点数量:"
    >
      <t-input />
    </t-input-adornment>
  </div>
  <div
    class="operations"
  >
    <t-button>
      插入根节点
    </t-button>
  </div>
  <t-form
    labelwidth="150"
    style="max-width: 500px;"
  >
    <t-form-item
      label="展开动画"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="显示连线"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="显示图标"
    >
      <t-switch />
    </t-form-item>
  </t-form>
  <t-tree
    activable=""
    checkable=""
    data="[object Object],[object Object],[object Object]"
    hover=""
    icon="true"
    label="function () { [native code] }"
    line="true"
    transition="true"
  />
</div>
`;

exports[`Tree > Tree stateVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div>
    <t-button>
      插入一个根节点
    </t-button>
  </div>
  <t-tree
    activable=""
    checkable=""
    data="[object Object],[object Object]"
    expand-all=""
    hover=""
    icon="function () { [native code] }"
    label="function () { [native code] }"
    line=""
  />
</div>
`;

exports[`Tree > Tree syncVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32"
>
  <t-space
    direction="vertical"
    size="16"
    style="width: 100%;"
  >
    <t-input-adornment
      prepend="checked:"
    >
      <t-input
        value="{1.1.1.1}, {1.1.1.2}"
      />
    </t-input-adornment>
    <t-input-adornment
      prepend="expanded:"
    >
      <t-input
        value="{1}, {1.1}, {1.1.1}, {2}"
      />
    </t-input-adornment>
    <t-input-adornment
      prepend="actived:"
    >
      <t-input
        value="{2}"
      />
    </t-input-adornment>
  </t-space>
  <t-tree
    activable=""
    actived="2"
    checkable=""
    data="[object Object],[object Object]"
    expanded="1,1.1,1.1.1,2"
    value="1.1.1.1,1.1.1.2"
    value-mode="onlyLeaf"
  />
</t-space>
`;

exports[`Tree > Tree vscrollVue demo works fine 1`] = `
<div
  class="tdesign-tree-demo tdesign-demo-vscroll"
>
  <div
    class="operations"
  >
    <t-input-adornment
      prepend="插入节点数量:"
    >
      <t-input />
    </t-input-adornment>
  </div>
  <div
    class="operations"
  >
    <t-button>
      插入根节点
    </t-button>
  </div>
  <t-form
    labelwidth="150"
    style="max-width: 500px;"
  >
    <t-form-item
      label="展开动画"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="显示连线"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="显示图标"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="启用虚拟滚动"
    >
      <t-switch />
    </t-form-item>
  </t-form>
  <t-tree
    activable=""
    checkable=""
    data="[object Object],[object Object],[object Object]"
    expand-all=""
    height="300"
    hover=""
    icon="true"
    label="function () { [native code] }"
    line="true"
    transition="true"
  />
</div>
`;
